--- a/src/style/newsletter-detail.scss
+++ b/src/style/newsletter-detail.scss
@@ -1,6 +1,6 @@
 .newsletter-detail {
     justify-content: center;
-    
+
     grid-row: content-s/content-e;
     grid-column: content-s/content-e;
 
@@ -15,5 +15,15 @@
         margin-top: 6.6rem;
         grid-column: 1/-1;
         grid-row: 1;
+    }
+
+    &__cancel {
+        grid-row: 1;
+        grid-column: latest-s/latest-e;
+        justify-self: end;
+        align-self: end;
+
+        margin-right: 1rem;
+        margin-bottom: 1.2rem;
     }
 }
