--- a/src/style/requests-item.scss
+++ b/src/style/requests-item.scss
@@ -1,4 +1,3 @@
-
 .requests-item {
     display: grid;
     grid-template-rows: [s title-s] 34px [title-e tenant-s] 5px [tenant-e e];
@@ -37,8 +36,8 @@
     }
     &__description {
         grid-column: s/e;
-        // grid-row: description-s/description-e;
-
+    }
+    .item-description {
         display: grid;
         grid-column-gap: 4rem;
         grid-auto-flow: column;
@@ -79,16 +78,15 @@
     &__move {
 
     }
-    &__description {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-    }
-    &__description-img {
-
-    }
-    &__description-text {
-
-        font-size: 1.4rem;
-        line-height: 1.7rem;
+    .item-description {
+        margin-top: 1.4rem;
+        margin-bottom: 2.2rem;
+        &__img {
+            object-fit: cover;
+        }
+        &__text {
+            font-size: 1.4rem;
+            line-height: 1.7rem;
+        }
     }
 }
